@@ -12,6 +12,7 @@
         selected:
           type: sequence
           label: 'The selected bundles'
+          orderby: value
           sequence:
             type: string
             label: 'A bundle machine name'
@@ -25,6 +26,7 @@
         selected:
           type: sequence
           label: 'The selected languages'
+          orderby: value
           sequence:
             type: string
             label: 'A language code'
