@@ -3,12 +3,33 @@ name: 'Default content index'
 description: 'Default content index created by the Database Search Defaults module'
 read_only: false
 field_settings:
-  title:
-    label: Title
-    type: text
+  author:
+    label: 'Author name'
+    type: string
     datasource_id: 'entity:node'
-    property_path: title
-    boost: 8
+    property_path: 'uid:entity:name'
+  changed:
+    label: Changed
+    type: date
+    datasource_id: 'entity:node'
+    property_path: changed
+  created:
+    label: 'Authored on'
+    type: date
+    datasource_id: 'entity:node'
+    property_path: created
+  field_tags:
+    label: Tags
+    type: integer
+    datasource_id: 'entity:node'
+    property_path: 'field_tags'
+  node_grants:
+    label: 'Node access information'
+    type: string
+    property_path: search_api_node_grants
+    indexed_locked: true
+    type_locked: true
+    hidden: true
   rendered_item:
     label: 'Rendered item'
     type: text
@@ -20,16 +41,6 @@ field_settings:
         'entity:node':
           article: search_index
           page: search_index
-  created:
-    label: 'Authored on'
-    type: date
-    datasource_id: 'entity:node'
-    property_path: created
-  changed:
-    label: Changed
-    type: date
-    datasource_id: 'entity:node'
-    property_path: changed
   status:
     label: 'Publishing status'
     type: boolean
@@ -42,16 +53,17 @@ field_settings:
     type: boolean
     datasource_id: 'entity:node'
     property_path: sticky
-  field_tags:
-    label: Tags
-    type: integer
+  title:
+    label: Title
+    type: text
     datasource_id: 'entity:node'
-    property_path: 'field_tags'
-  author:
-    label: 'Author name'
+    property_path: title
+    boost: 8
+  type:
+    label: 'Content type'
     type: string
     datasource_id: 'entity:node'
-    property_path: 'uid:entity:name'
+    property_path: type
   uid:
     label: 'Author ID'
     type: integer
@@ -59,18 +71,6 @@ field_settings:
     property_path: uid
     indexed_locked: true
     type_locked: true
-  node_grants:
-    label: 'Node access information'
-    type: string
-    property_path: search_api_node_grants
-    indexed_locked: true
-    type_locked: true
-    hidden: true
-  type:
-    label: 'Content type'
-    type: string
-    datasource_id: 'entity:node'
-    property_path: type
 processor_settings:
   add_url:
     weights:
@@ -82,6 +82,9 @@ processor_settings:
     weights:
       preprocess_index: -6
       preprocess_query: -4
+  entity_status:
+    weights:
+      preprocess_index: -10
   html_filter:
     weights:
       preprocess_index: -3
@@ -103,9 +106,6 @@ processor_settings:
     fields:
       - rendered_item
       - title
-  entity_status:
-    weights:
-      preprocess_index: -10
   rendered_item:
     weights:
       add_properties: 0
@@ -171,8 +171,8 @@ processor_settings:
       - rendered_item
       - title
 options:
-  index_directly: true
   cron_limit: 50
+  index_directly: true
 datasource_settings:
   'entity:node': {  }
 tracker_settings:
